2016-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Reinstate change made on 2016-10-08 and reverted on 2016-10-23.

	* tp/Texinfo/Parser.pm (_parse_texi): If 'menu' element is not 
	directly under a "root element" (@node or sectioning), don't 
	record it in the list of menus for that node, and issue a warning.

2016-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Remove code for calling 'add_missing_menus' if 
	'validatemenus' is off.  It can add menus incorrectly if all the 
	menus in the node are not recorded, which could be the case
	for menus incorrectly nested inside another command.

	* tp/Texinfo/Convert/Structuring.pm (add_node_menu_if_missing)
	Split out new function 'menu_of_node'.

	* tp/Texinfo/Convert/HTML.pm
	(_convert_menu_command): Record that a menu has been seen in the
	current node.
	(_convert_heading_command): If no menu has been seen in the 
	node, call 'menu_of_node' and convert the result.

	* tp/Texinfo/Convert/Plaintext.pm
	(_menu): Record that a menu has been seen in the current node.
	(_convert): If no menu has been seen in the node, call 
	menu_of_node and convert the result.

	* tp/t/30sectioning.t (no_menu): Test 'info' format instead of
	'plaintext'.

2016-10-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (count_bytes): Call throughout
	without using method call syntax.
	(_align_lines): Remove some commented-out lines of code.

2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (nodes_tree): If 'validatemenus' is 
	not on, do not complain about a node lacking a menu item if that 
	node has no menu at all.  If 'validatemenus' is not on, in order 
	to complain about the menu structure not matching the section 
	structure, the nodes must be associated with sections and 
	contain menus.  Some comments changed.

2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (nodes_tree): Only check whether 