@@ -1,3 +1,10 @@
+2016-10-29  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Structuring.pm (_new_node_menu_entry): Set 
+	'menu_entry_node' and 'menu_entry_separator' extra values on 
+	menu entry directly instead of calling 
+	'Texinfo::Parser::_register_extra_menu_entry_information'.
+
 2016-10-27  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	Reinstate change made on 2016-10-08 and reverted on 2016-10-23.
